--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Bootstrap Admin Template</title>
+    <title>Soltic</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,9 +51,9 @@
                             <li>
                                 <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
                             </li>
-                            <li class="active">
+                            <!-- <li class="active">
                                 <i class="fa fa-edit"></i> Forms
-                            </li>
+                            </li> -->
                         </ol>
                     </div>
                 </div>
@@ -107,6 +107,9 @@
 
     </div>
     <!-- /#wrapper -->
+
+
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
