--- a/mash.html
+++ b/mash.html
@@ -21,7 +21,7 @@
    <!--  <link href="css/sb-admin.css" rel="stylesheet">
      -->
 
-    <link rel="stylesheet" type="text/css" href="css/grand.css">
+    <link rel="stylesheet" type="text/css" href="css/mash.css">
     
 
     <!-- Custom Fonts -->
@@ -38,7 +38,7 @@
 
     <body>
     <div class="container">
-                    <h1 id="grand">GRAND BUS <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a> </h1>
+                    <h1 id="grand">MASH POA <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a> </h1>
                     <!-- <ol>
                             <li>
                                 
