--- a/mash.html
+++ b/mash.html
@@ -16,7 +16,7 @@
 
     <!-- Bootstrap Core CSS RTL-->
     <link href="css/bootstrap-rtl.min.css" rel="stylesheet">
-
+    <link href="css/sb-admin.css" rel="stylesheet">
     <!-- Custom CSS -->
    <!--  <link href="css/sb-admin.css" rel="stylesheet">
      -->
@@ -37,7 +37,45 @@
 </head>
 
     <body>
-    <div class="container">
+    <div id="wrapper">
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">SOLTIC</a>
+            </div>
+            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav side-nav">
+                    <li class="active">
+                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                    </li>
+                    <li>
+                        <a href="forms.html"><i class="fa fa-fw fa-edit"></i>Add a company</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i>Companies<i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo" class="collapse">
+                            <li>
+                                <a href="grand.html">Grand Bus</a>
+                            </li>
+                            <li>
+                                <a href="mash.html">Mash Poa</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </nav>
+               <div class="container">
                     <h1 id="grand">MASH POA <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a> </h1>
                     <!-- <ol>
                             <li>
@@ -61,7 +99,7 @@
                             <td>45</td>
                             <td>KCD123</td>
                           </tr>
-                          <tr>
+                         <!--  <tr>
                           <td></td>
                             <td></td>
                             <td></td>
@@ -73,11 +111,11 @@
                             <td></td>
                             <td></td>
                           </tr>
-                       <!--  </table>
-                        <br> -->
+                    
+                        <br> --> 
 
                         <!-- <table id="t01"> -->
-                          <tr>
+                         <!--  <tr>
                             <th></th>
                             <th></th>
                             <th></th> 
@@ -100,8 +138,18 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                          </tr>
+                          </tr> -->
                         </table>
+                         <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Morris Charts JavaScript -->
+    <script src="js/plugins/morris/raphael.min.js"></script>
+    <script src="js/plugins/morris/morris.min.js"></script>
+    <script src="js/plugins/morris/morris-data.js"></script>
+
 
 </div>
     </body>
